styles/depot_display.css
#main_container {
    padding-top: 550px;
    padding-bottom: 20px;
    font-size: 1.2rem;
    justify-content: space-evenly;
    gap: 20px;
    align-items: flex-start;
    margin-left: 40px;
}

#map {
    width: 80vw;
    height: 20vh;
    padding-bottom: 200px;
}

.favorite-button {
    display: flex;
    align-items: center;
    border: 1px solid;
    border-radius: 15px;
    background-color: transparent;
    cursor: pointer;
    font-size: 24px; /* Adjust the size of the icon */
    color: orange; /* Color of the star */
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    background-color: beige;
    align-self: center;
}

.favorite-button:hover {
    color: orange; /* Color when hovering over the button */
}
.location_hours {
    min-width: 80vw;
}

.location_phone,
.location_address,
.location_name,
.location_website,
.location_hours,
.location_notes {
    border: 1px solid #187753;
    border-radius: 10px;
    padding: 3px 6px;
}

.favourite_button {
    align-self: center;
    margin-right: 40px;
}

/* Review Section Styles */
#review_section {
    width: 90%; /* Increase the width */
    padding: 20px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional: adds a subtle shadow for depth */
    background-color: #fff; /* Optional: change background color */
    border-radius: 10px; /* Optional: rounded corners */
    border: 1px solid #187753; /* Adding the border */
    border-radius: 10px; /* Adding rounded corners */
    margin-bottom: 20px;
}

#reviews_container {
    max-height: 200px; /* Adjust the height as per your requirement */
    overflow-y: auto; /* Enables vertical scrolling */
    padding: 10px;
    border: 1px solid #ccc; /* Optional: adds a border */
    margin-top: 10px;
}

.review {
    margin-bottom: 10px; /* Space between reviews */
}

#review_form {
    margin-top: 20px;
}

/* Star Rating Styles */
.star {
    cursor: pointer;
    color: grey;
}

.star.selected {
    color: orange;
}

#star_rating {
    display: flex;
    justify-content: flex-start; /* Align stars to the left */
    gap: 5px; /* Adjust gap between stars */
}

#review_text {
    width: 100%;
    box-sizing: border-box;
    margin: 0;
    padding: 10px;
    border: 1px solid #ccc;
}
/* Submit Review Button Styles */
#submit_review_button {
    box-sizing: border-box;
    margin: 0;
    min-width: 30vw;
    min-height: 5vh;
    border-radius: 8px;
    border: none;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    color: white;
    background-color: #187753;
    cursor: pointer;
    font-size: 1.2rem;
}

#submit_review_button:hover {
    background-color: #55ac85;
}

#submit_review_button:active {
    background-color: #55ac85;
    transform: translateY(5px);
}

